# azabab

./: .env-sample  .gitignore  LICENSE.txt  README.md  changelog.sh  deploy.sh  make-icons.sh  package.json  pwa-configuration.ts  revoke-root.sh  svelte.config.js  test-page-speed.sh  vite.config.ts
benchmarks/: east-1-benchmarks.txt  lax-hh-benchmarks.txt
monitor-wip/: 01-postgres.sh  02-prometheus.sh  03-cadvisor.sh  04-elk.sh  04-grafana.sh  05-filebeat.sh  install.sh  log_container_resources.sh  stop_inactive_containers.sh  tmp.sh  ubuntu@west-1.azabab.com
pb_hooks/: change-domain.pb.js  change-project-name.pb.js  change-project-type.pb.js  changeversion.pb.js  check-domain.pb.js  clone.pb.js  configureserver.pb.js  create-ssh-keys.pb.js  createinstance.pb.js  createproject.pb.js  cron_import_stats.pb.js  delete-ssh-keys.pb.js  get-litestream-generations.pb.js  getinstancefile.pb.js  getinstancefiles.pb.js  hooks.pb.js  import-stats.pb.js  log-disk-usage.pb.js  main.pb.js  old-misc.pb.js  pitr.pb.js  remove-ssh-user.js  removeproject.pb.js  resync.pb.js  setup-folder-sync.pb.js  sync.pb.js  (+5 more)
server/rust-server/: Cargo.toml
server/rust-server/src/: catch_all_handler.rs  change_version.rs  configure_server.rs  create_instance.rs  create_project.rs  create_user.rs  get_disk_space.rs  get_instance_file.rs  get_instance_files.rs  get_litestream_generations.rs  main.rs  pitr copy.rs  pitr.rs  remove_project.rs  remove_user.rs  setup_folder_sync.rs  setup_marmot.rs  sync.rs  toggle_instance.rs  update_litestream.rs  update_route.rs  update_streaming_backup_settings.rs
(+335 files in other folders)
